--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
 
 <section class="skills" id="skills">
-    <h1 class="skill-header">My Top Skills</h1>
+    <h1 class="skill-header">Skills</h1>
     <br>
     <div class="skills-wrapper">
         <div class="first-set animate__animated animate__pulse">
