--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://kit.fontawesome.com/31149d48b0.js" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
@@ -216,11 +217,11 @@
                   <img class="card-img-top" src="images/Screen Shot 2023-10-20 at 08.00.04.png" alt="Card image" style="width:100%">
                   <div class="card-body">
                       <h4 class="card-title">Clotho - P2P Sales</h4>
-                      <p class="card-text">React - Axios - Node.js - Sequelize - APIs - mySQL</p>
+                      <p class="card-text">WebDev II: React - Axios - Node.js - Sequelize - APIs - mySQL</p>
                       <div class="text-center">
-                          <a href="http://www.workright.works" target="" class="btn btn-success">Live</a>
-                          <a href="#" class="btn btn-success">Github</a>
-                          <a href="#" class="btn btn-success">Presentation</a>
+                          <a href="https://clotho-client-d1e4ce0f9903.herokuapp.com/" target="" class="btn btn-success">Live</a>
+                          <a href="https://github.com/Mer-W/clotho" class="btn btn-success">Github</a>
+                          <a href="assets/docs/Clotho-Final-Presentation.pdf" class="btn btn-success">Presentation</a>
                       </div>
                   </div>
               </div>
@@ -230,7 +231,7 @@
             <div class="card">
                 <img class="card-img-top" src="images/Screen Shot 2023-10-20 at 07.15.19.png" alt="Card image" style="width:100%">
                 <div class="card-body">
-                    <h4 class="card-title">WorkRight - Jobs Listings</h4>
+                    <h4 class="card-title">Web Services: WorkRight - Jobs Listings</h4>
                     <p class="card-text">HTML/CSS/JS Vanilla- Node.js - Sequelize - APIs - mySQL</p>
                     <div class="text-center">
                         <a href="http://www.workright.works" target="" class="btn btn-success">Live</a>
@@ -261,6 +262,18 @@
 
     <!-- load javascript after loading html -->
     <script src="script/script.js"></script>
+
+    <script>
+    $(document).ready(function() {
+        $(window).scroll(function() {
+            if ($(this).scrollTop() > 50) {  // if you've scrolled more than 50px
+                $('.navbarScroll').addClass('bg-scrolled');
+            } else {
+                $('.navbarScroll').removeClass('bg-scrolled');
+            }
+        });
+    });
+    </script>
 
     <!-- Ion icons scripts -->
     <script
