--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <section class="text-black">
   <div class="container">
       <br>
-      <h1 class="text-center">Contact</h1>
+      <h1 class="text-center" id="contact">Contact</h1>
       <br>
       <div class="row text-center">
           <div class="col">
@@ -236,7 +236,7 @@
                     <div class="text-center">
                         <a href="http://www.workright.works" target="" class="btn btn-success">Live</a>
                         <a href="https://github.com/Lewi-5/WorkRight" class="btn btn-success">Github</a>
-                        <a href="#" class="btn btn-success">Presentation</a>
+                        <a href="assets/docs/WorkRight.pdf" class="btn btn-success">Presentation</a>
                     </div>
                 </div>
             </div>
@@ -249,9 +249,9 @@
                   <h4 class="card-title">GreenBrewBros - Brewery </h4>
                   <p class="card-text">Web Design - HTML5 - CSS3 - JS</p>
                   <div class="text-center">
-                      <a href="#" class="btn btn-success">Live</a>
-                      <a href="#" class="btn btn-success">Github</a>
-                      <a href="#" class="btn btn-success">Presentation</a>
+                      <a href="https://green-brew-bros-d0cf1e06d981.herokuapp.com/" class="btn btn-success">Live</a>
+                      <a href="https://github.com/dustinruck/dustinruck.github.io" class="btn btn-success">Github</a>
+                      <a href="assets/docs/Green Brew Bros Presentation.pdf" class="btn btn-success">Presentation</a>
                   </div>
               </div>
           </div>
