--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
             <div class="card">
                 <img class="card-img-top" src="images/Screen Shot 2023-10-20 at 07.15.19.png" alt="Card image" style="width:100%">
                 <div class="card-body">
-                    <h4 class="card-title">Web Services: WorkRight - Jobs Listings</h4>
-                    <p class="card-text">HTML/CSS/JS Vanilla- Node.js - Sequelize - APIs - mySQL</p>
+                    <h4 class="card-title">WorkRight - Jobs Listings</h4>
+                    <p class="card-text">Web Services: HTML/CSS/JS Vanilla - Node.js - Sequelize - APIs - mySQL</p>
                     <div class="text-center">
                         <a href="http://www.workright.works" target="" class="btn btn-success">Live</a>
                         <a href="https://github.com/Lewi-5/WorkRight" class="btn btn-success">Github</a>
@@ -247,7 +247,7 @@
               <img class="card-img-top" src="images/Screen Shot 2023-10-20 at 08.21.39.png" alt="Card image" style="width:100%">
               <div class="card-body">
                   <h4 class="card-title">GreenBrewBros - Brewery </h4>
-                  <p class="card-text">Web Design - HTML5 - CSS3 - JS</p>
+                  <p class="card-text">Web Design: HTML5 - CSS3 - JS</p>
                   <div class="text-center">
                       <a href="https://green-brew-bros-d0cf1e06d981.herokuapp.com/" class="btn btn-success">Live</a>
                       <a href="https://github.com/dustinruck/dustinruck.github.io" class="btn btn-success">Github</a>
