--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
   </div>
 </section>
 
-<section class="text-black">
+<section class="text-black" id="contact">
   <div class="container">
       <br>
-      <h1 class="text-center" id="contact">Contact</h1>
+      <h1 class="text-center">Contact</h1>
       <br>
       <div class="row text-center">
           <div class="col">
