--- a/index.html
+++ b/index.html
@@ -127,83 +127,134 @@
 
 
 <section class="skills" id="skills">
-  <h1 class="skill-header">My Top Skills</h1>
-
-  <br>
-  <div class="skills-wrapper">
-    <div class="first-set animate__animated animate__pulse">
-      <img
-        src="assets/icons/icons8-html-5.svg"
-        alt=""
-        loading="lazy"
-        class="icon icon-card"
-      />
-      <img
-        src="assets/icons/icons8-css-48.png"
-        alt=""
-        loading="lazy"
-        class="icon icon-card"
-      />
-      <img
-        src="assets/icons/icons8-javascript-48.png"
-        alt=""
-        loading="lazy"
-        class="icon icon-card"
-      />
-      <img
-        src="assets/icons/icons8-bootstrap-48.png"
-        alt=""
-        loading="lazy"
-        class="icon icon-card"
-      />
-      <img
-        src="assets/icons/icons8-react-native-48.png"
-        alt=""
-        loading="lazy"
-        class="icon icon-card"
-      />
-      <img
-      src="assets/icons/icons8-nodejs.svg"
-      alt=""
-      loading="lazy"
-      class="icon icon-card"
-      />
-    </div>
-
-    <div class="second-set animate__animated animate__pulse">
-    
-      <img
-      src="assets/icons/icons8-java.svg"
-      alt=""
-      loading="lazy"
-      class="icon icon-card"
-      />
-      <img
-      src="assets/icons/icons8-spring-boot.svg"
-      alt=""
-      loading="lazy"
-      class="icon icon-card"
-      />
-      <img
-      src="assets/icons/icons8-php-48.png"
-      alt=""
-      loading="lazy"
-      class="icon icon-card"
-      />
-      <img
-      src="assets/icons/icons8-thymeleaf.svg"
-      alt=""
-      loading="lazy"
-      class="icon icon-card"
-      />
-      <img
-      src="assets/icons/icons8-linux-48.png"
-      alt=""
-      loading="lazy"
-      class="icon icon-card"
-      />
-  </div>
-</section>
+    <h1 class="skill-header">My Top Skills</h1>
+    <br>
+    <div class="skills-wrapper">
+      <div class="first-set animate__animated animate__pulse">
+        <div class="icon-wrapper">
+          <img
+              src="assets/icons/icons8-html-5.svg"
+              alt="html5"
+              loading="lazy"
+              class="icon icon-card"
+          />
+          <span class="icon-card-tooltip">html5</span>
+        </div>
+  
+        <div class="icon-wrapper">
+          <img
+              src="assets/icons/icons8-css-48.png"
+              alt="css3"
+              loading="lazy"
+              class="icon icon-card"
+          />
+          <span class="icon-card-tooltip">css3</span>
+        </div>
+  
+        <div class="icon-wrapper">
+          <img
+              src="assets/icons/icons8-javascript-48.png"
+              alt="javascript"
+              loading="lazy"
+              class="icon icon-card"
+          />
+          <span class="icon-card-tooltip">javascript</span>
+        </div>
+  
+        <div class="icon-wrapper">
+          <img
+              src="assets/icons/icons8-bootstrap-48.png"
+              alt="bootstrap"
+              loading="lazy"
+              class="icon icon-card"
+          />
+          <span class="icon-card-tooltip">bootstrap</span>
+        </div>
+  
+        <div class="icon-wrapper">
+          <img
+              src="assets/icons/icons8-react-native-48.png"
+              alt="react"
+              loading="lazy"
+              class="icon icon-card"
+          />
+          <span class="icon-card-tooltip">react</span>
+        </div>
+  
+        <div class="icon-wrapper">
+          <img
+              src="assets/icons/icons8-nodejs.svg"
+              alt="nodejs"
+              loading="lazy"
+              class="icon icon-card"
+          />
+          <span class="icon-card-tooltip">nodejs</span>
+        </div>
+      </div>
+  
+      <div class="second-set animate__animated animate__pulse">
+        <div class="icon-wrapper">
+          <img
+              src="assets/icons/icons8-java.svg"
+              alt="java"
+              loading="lazy"
+              class="icon icon-card"
+          />
+          <span class="icon-card-tooltip">java</span>
+        </div>
+  
+        <div class="icon-wrapper">
+          <img
+              src="assets/icons/icons8-spring-boot.svg"
+              alt="spring boot"
+              loading="lazy"
+              class="icon icon-card"
+          />
+          <span class="icon-card-tooltip">spring boot</span>
+        </div>
+  
+        <div class="icon-wrapper">
+          <img
+              src="assets/icons/icons8-php-48.png"
+              alt="php"
+              loading="lazy"
+              class="icon icon-card"
+          />
+          <span class="icon-card-tooltip">php</span>
+        </div>
+  
+        <div class="icon-wrapper">
+          <img
+              src="assets/icons/icons8-thymeleaf.svg"
+              alt="thymeleaf"
+              loading="lazy"
+              class="icon icon-card"
+          />
+          <span class="icon-card-tooltip">thymeleaf</span>
+        </div>
+  
+        <div class="icon-wrapper">
+          <img
+              src="assets/icons/icons8-linux-48.png"
+              alt="linux"
+              loading="lazy"
+              class="icon icon-card"
+          />
+          <span class="icon-card-tooltip">linux</span>
+        </div>
+  
+        <div class="icon-wrapper">
+          <img
+              src="assets/icons/AVID-MEDIA-COMPOSER-LOGO-1404x1404.png"
+              alt="avid"
+              loading="lazy"
+              class="icon icon-card"
+          />
+          <span class="icon-card-tooltip">avid</span>
+        </div>
+      </div>
+  </section>
+  
 
 
 
