--- a/index.html
+++ b/index.html
@@ -127,89 +127,65 @@
 
 
 <section class="skills" id="skills">
-  <h1 class="skill-header">My Top Skills</h1>
+    <h1 class="skill-header">My Top Skills</h1>
+    <br>
+    <div class="skills-wrapper">
+        <div class="first-set animate__animated animate__pulse">
+            <div class="icon-wrapper">
+                <img src="assets/icons/icons8-html-5.svg" alt="html5" loading="lazy" class="icon icon-card" />
+                <span class="hover-text">html5</span>
+            </div>
+            <div class="icon-wrapper">
+                <img src="assets/icons/icons8-css-48.png" alt="css3" loading="lazy" class="icon icon-card" />
+                <span class="hover-text">css3</span>
+            </div>
+            <div class="icon-wrapper">
+                <img src="assets/icons/icons8-javascript-48.png" alt="javascript" loading="lazy" class="icon icon-card" />
+                <span class="hover-text">javascript</span>
+            </div>
+            <div class="icon-wrapper">
+                <img src="assets/icons/icons8-bootstrap-48.png" alt="bootstrap" loading="lazy" class="icon icon-card" />
+                <span class="hover-text">bootstrap</span>
+            </div>
+            <div class="icon-wrapper">
+                <img src="assets/icons/icons8-react-native-48.png" alt="react" loading="lazy" class="icon icon-card" />
+                <span class="hover-text">react</span>
+            </div>
+            <div class="icon-wrapper">
+                <img src="assets/icons/icons8-nodejs.svg" alt="nodejs" loading="lazy" class="icon icon-card" />
+                <span class="hover-text">nodejs</span>
+            </div>
+        </div>
 
-  <br>
-  <div class="skills-wrapper">
-    <div class="first-set animate__animated animate__pulse">
-      <img
-        src="assets/icons/icons8-html-5.svg"
-        alt="html5"
-        loading="lazy"
-        class="icon icon-card"
-      />
-      <img
-        src="assets/icons/icons8-css-48.png"
-        alt="css3"
-        loading="lazy"
-        class="icon icon-card"
-      />
-      <img
-        src="assets/icons/icons8-javascript-48.png"
-        alt="javascript"
-        loading="lazy"
-        class="icon icon-card"
-      />
-      <img
-        src="assets/icons/icons8-bootstrap-48.png"
-        alt="bootstrap"
-        loading="lazy"
-        class="icon icon-card"
-      />
-      <img
-        src="assets/icons/icons8-react-native-48.png"
-        alt="react"
-        loading="lazy"
-        class="icon icon-card"
-      />
-      <img
-      src="assets/icons/icons8-nodejs.svg"
-      alt="nodejs"
-      loading="lazy"
-      class="icon icon-card"
-      />
+        <div class="second-set animate__animated animate__pulse">
+            <div class="icon-wrapper">
+                <img src="assets/icons/icons8-java.svg" alt="java" loading="lazy" class="icon icon-card" />
+                <span class="hover-text">java</span>
+            </div>
+            <div class="icon-wrapper">
+                <img src="assets/icons/icons8-spring-boot.svg" alt="spring boot" loading="lazy" class="icon icon-card" />
+                <span class="hover-text">spring boot</span>
+            </div>
+            <div class="icon-wrapper">
+                <img src="assets/icons/icons8-php-48.png" alt="php" loading="lazy" class="icon icon-card" />
+                <span class="hover-text">php</span>
+            </div>
+            <div class="icon-wrapper">
+                <img src="assets/icons/icons8-thymeleaf.svg" alt="thymeleaf" loading="lazy" class="icon icon-card" />
+                <span class="hover-text">thymeleaf</span>
+            </div>
+            <div class="icon-wrapper">
+                <img src="assets/icons/icons8-linux-48.png" alt="linux" loading="lazy" class="icon icon-card" />
+                <span class="hover-text">linux</span>
+            </div>
+            <div class="icon-wrapper">
+                <img src="assets/icons/AVID-MEDIA-COMPOSER-LOGO-1404x1404.png" alt="avid" loading="lazy" class="icon icon-card" />
+                <span class="hover-text">avid</span>
+            </div>
+        </div>
     </div>
-
-    <div class="second-set animate__animated animate__pulse">
-    
-      <img
-      src="assets/icons/icons8-java.svg"
-      alt="java"
-      loading="lazy"
-      class="icon icon-card"
-      />
-      <img
-      src="assets/icons/icons8-spring-boot.svg"
-      alt="spring boot"
-      loading="lazy"
-      class="icon icon-card"
-      />
-      <img
-      src="assets/icons/icons8-php-48.png"
-      alt="php"
-      loading="lazy"
-      class="icon icon-card"
-      />
-      <img
-      src="assets/icons/icons8-thymeleaf.svg"
-      alt="thymeleaf"
-      loading="lazy"
-      class="icon icon-card"
-      />
-      <img
-      src="assets/icons/icons8-linux-48.png"
-      alt="linux"
-      loading="lazy"
-      class="icon icon-card"
-      />
-      <img
-      src="assets/icons/AVID-MEDIA-COMPOSER-LOGO-1404x1404.png"
-      alt="avid"
-      loading="lazy"
-      class="icon icon-card"
-      />
-  </div>
 </section>
+
 
 
 
@@ -264,6 +240,41 @@
       </div>
 
       <br>
+
+      <!-- Footer Section -->
+<footer class="footer-section bg-dark text-white py-4">
+    <div class="container">
+        <div class="row text-center">
+
+            <!-- Navigation Links -->
+            <div class="col-md-6">
+                <h5>Quick Links</h5>
+                <ul class="list-unstyled">
+                    <li><a href="#home" class="text-white">Home</a></li>
+                    <li><a href="#about" class="text-white">About</a></li>
+                    <li><a href="#portfolio" class="text-white">Portfolio</a></li>
+                    <li><a href="#contact" class="text-white">Contact</a></li>
+                </ul>
+            </div>
+
+            <!-- Social Media Links -->
+            <div class="col-md-6">
+                <h5>Follow Me</h5>
+                <a href="github.com/dustinruck" class="text-white me-3"><i class="fab fa-github"></i></a>
+                <a href="linkedin.com/in/dustinruck" class="text-white me-3"><i class="fab fa-linkedin"></i></a>
+                <a href="twitter.com/dustinruck" class="text-white"><i class="fab fa-twitter"></i></a>
+            </div>
+        </div>
+
+        <!-- Copyright Section -->
+        <div class="row mt-3">
+            <div class="col text-center">
+                <p>&copy; 2023 Dustin Ruck. All rights reserved.</p>
+            </div>
+        </div>
+    </div>
+</footer>
+
 
 
     <!-- load javascript after loading html -->
