--- a/index.html
+++ b/index.html
@@ -174,6 +174,25 @@
                 <img src="assets/icons/icons8-thymeleaf.svg" alt="thymeleaf" loading="lazy" class="icon icon-card" />
                 <span class="hover-text">thymeleaf</span>
             </div>
+            
+
+
+            
+            <div class="icon-wrapper">
+                <img src="assets/icons/icons8-c-sharp-logo-2-48.png" alt="Csharp" loading="lazy" class="icon icon-card" />
+                <span class="hover-text">C#</span>
+            </div>
+            <div class="icon-wrapper">
+                <img src="assets/icons/icons8-thymeleaf.svg" alt=".NET" loading="lazy" class="icon icon-card" />
+                <span class="hover-text">thymeleaf</span>
+            </div>
+            <div class="icon-wrapper">
+                <img src="assets/icons/icons8-thymeleaf.svg" alt="WPF" loading="lazy" class="icon icon-card" />
+                <span class="hover-text">thymeleaf</span>
+            </div>
+
+
+
             <div class="icon-wrapper">
                 <img src="assets/icons/icons8-linux-48.png" alt="linux" loading="lazy" class="icon icon-card" />
                 <span class="hover-text">linux</span>
