skills logos fix

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
           <h2 class="hero_title">Hi, I'm Dustin</h2>
           <h2 class="hero_desc">I am a Junior</h2>
-          <p class="hero_desc"><span id="dynamicText">full stack developer</span><br> and I'm open to remote internships or positions.</p>
-          <h3><a href="assets/docs/DustinRuck_2023_EN_FSD.pdf" target="_blank">My CV</a></h3>  
+          <p class="hero_desc"><span id="dynamicText">DEVELOPER</span><br> and I'm open to internships or positions</p>
+          <h3><a href="assets/docs/DustinRuck_2024_EN_FSD.pdf" target="_blank">My CV</a></h3>
         </div>
       </div>
   </div>
@@ -107,7 +107,7 @@
 
           <div class="col-lg-6">
               <p>
-                  I'm currently finishing an intensive 15-month AEC at John Abbott College in Full Stack Development and looking for an internship position as soon as Jan 15 2024.
+                  I'm currently finishing an intensive 13-month full-time AEC at John Abbott College in Full Stack Development and looking for an internship position as soon as April 29, 2024.
               </p>
 
               <div class="mt-6">
@@ -182,12 +182,12 @@
                 <span class="hover-text">C#</span>
             </div>
             <div class="icon-wrapper">
-                <img src="assets/icons/icons8-thymeleaf.svg" alt=".NET" loading="lazy" class="icon icon-card" />
-                <span class="hover-text">thymeleaf</span>
+                <img src="assets/icons/icons8-github-150.png" alt="GitHub" loading="lazy" class="icon icon-card" />
+                <span class="hover-text">GitHub</span>
             </div>
             <div class="icon-wrapper">
-                <img src="assets/icons/icons8-thymeleaf.svg" alt="WPF" loading="lazy" class="icon icon-card" />
-                <span class="hover-text">thymeleaf</span>
+                <img src="assets/icons/icons8-jira-144.png" alt="Jira" loading="lazy" class="icon icon-card" />
+                <span class="hover-text">Jira</span>
             </div>
 
 
@@ -217,6 +217,7 @@
                   <img class="card-img-top" src="images/Screen Shot 2023-10-20 at 08.00.04.png" alt="Card image" style="width:100%">
                   <div class="card-body">
                       <h4 class="card-title">Clotho - P2P Sales</h4>
+                      <p class="card-text">Use username: mer and password: 123 to view listings and sales</p>
                       <p class="card-text">WebDev II: React - Axios - Node.js - Sequelize - APIs - mySQL</p>
                       <div class="text-center">
                           <a href="https://clotho-client-d1e4ce0f9903.herokuapp.com/" target="" class="btn btn-success">Live</a>
