--- a/index.html
+++ b/index.html
@@ -257,6 +257,9 @@
               </div>
           </div>
       </div>
+      </div>
+    </div>
+</div>
 
       <br>
 
@@ -279,16 +282,15 @@
             <!-- Social Media Links -->
             <div class="col-md-6">
                 <h5>Follow Me</h5>
-                <a href="github.com/dustinruck" class="text-white me-3"><i class="fab fa-github"></i></a>
-                <a href="linkedin.com/in/dustinruck" class="text-white me-3"><i class="fab fa-linkedin"></i></a>
-                <a href="twitter.com/dustinruck" class="text-white"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.github.com/dustinruck" class="text-white me-2"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/dustinruck" class="text-white me-2"><i class="fab fa-linkedin"></i></a>
             </div>
         </div>
 
         <!-- Copyright Section -->
         <div class="row mt-3">
             <div class="col text-center">
-                <p>&copy; 2023 Dustin Ruck. All rights reserved.</p>
+                <p>&copy; 2024 Dustin Ruck</p>
             </div>
         </div>
     </div>
