Updated backdrop and text and buttons

--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://kit.fontawesome.com/31149d48b0.js" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
 </head>
 
 <body>
 
   <nav class="navbar navbar-expand-lg fixed-top navbarScroll">
     <div class="container">
-        <a class="navbar-brand" href="#">DUSTIN RUCK | WEBDEV</a>
+        <a class="navbar-brand" href="#">DUSTIN RUCK | WEBDEV & MEDIA</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -45,9 +47,10 @@
       <div class="row">
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
           <h2 class="hero_title">Hi, I'm Dustin</h2>
-          <h2 class="hero_desc">I am a Junior</h2>
-          <p class="hero_desc"><span id="dynamicText">DEVELOPER</span><br> and I'm open to internships or positions</p>
-          <h3><a href="assets/docs/DustinRuck_2024_EN_FSD.pdf" target="_blank">My CV</a></h3>
+          <h2 class="hero_desc">I like to help people.</h2>
+          <h2 class="hero_desc">I can do:</h2>
+          <p class="hero_desc"><span id="dynamicText">web development</span><br>for you.</p>
+          <h3><a href="assets/docs/DustinRuck_2024_EN_FSD.pdf" target="_blank" class="btn btn-grad">My CV</a></h3>
         </div>
       </div>
   </div>
@@ -220,9 +223,9 @@
                     <h4 class="card-title">GreenBrewBros - Brewery </h4>
                     <p class="card-text">Web Design: HTML5 - CSS3 - JS</p>
                     <div class="text-center">
-                        <a href="https://green-brew-bros-d0cf1e06d981.herokuapp.com/" class="btn btn-success">Live</a>
-                        <a href="https://github.com/dustinruck/dustinruck.github.io" class="btn btn-success">Github</a>
-                        <a href="assets/docs/Green Brew Bros Presentation.pdf" class="btn btn-success">Presentation</a>
+                        <a href="https://green-brew-bros-d0cf1e06d981.herokuapp.com/" class="btn btn-grad">Live</a>
+                        <a href="https://github.com/dustinruck/dustinruck.github.io" class="btn btn-grad">Github</a>
+                        <a href="assets/docs/Green Brew Bros Presentation.pdf" class="btn btn-grad">Presentation</a>
                     </div>
                 </div>
             </div>
@@ -237,9 +240,9 @@
                       <p class="card-text">Use username: mer and password: 123 to view listings and sales</p>
                       <p class="card-text">WebDev II: React - Axios - Node.js - Sequelize - APIs - mySQL</p>
                       <div class="text-center">
-                          <a href="https://clotho-client-d1e4ce0f9903.herokuapp.com/" target="" class="btn btn-success">Live</a>
-                          <a href="https://github.com/Mer-W/clotho" class="btn btn-success">Github</a>
-                          <a href="assets/docs/Clotho-Final-Presentation.pdf" class="btn btn-success">Presentation</a>
+                          <a href="https://clotho-client-d1e4ce0f9903.herokuapp.com/" target="" class="btn btn-grad">Live</a>
+                          <a href="https://github.com/Mer-W/clotho" class="btn btn-grad">Github</a>
+                          <a href="assets/docs/Clotho-Final-Presentation.pdf" class="btn btn-grad">Presentation</a>
                       </div>
                   </div>
               </div>
@@ -252,8 +255,8 @@
                     <h4 class="card-title">WorkRight - Jobs Listings</h4>
                     <p class="card-text">Web Services: HTML/CSS/JS Vanilla - Node.js - Sequelize - APIs - mySQL</p>
                     <div class="text-center">
-                        <a href="http://www.workright.works" target="" class="btn btn-success">Live</a>
-                        <a href="https://github.com/Lewi-5/WorkRight" class="btn btn-success">Github</a>
+                        <a href="http://www.workright.works" target="" class="btn btn-grad">Live</a>
+                        <a href="https://github.com/Lewi-5/WorkRight" class="btn btn-grad">Github</a>
                         <a href="assets/docs/WorkRight.pdf" class="btn btn-success">Presentation</a>
                     </div>
                 </div>
@@ -336,7 +339,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
         $(document).ready(function() {
-            let roles = ['FULL STACK DEVELOPER', 'PROGRAMMER', 'CREATIVE', 'DESIGNER', 'PROJECT MANAGER'];
+            let roles = ['business automation', 'media production', 'project management'];
             let currentIndex = 0;
     
             setInterval(function() {
