tiny glow errors fix

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                     <div class="text-center">
                         <a href="http://www.workright.works" target="" class="btn btn-grad">Live</a>
                         <a href="https://github.com/Lewi-5/WorkRight" class="btn btn-grad">Github</a>
-                        <a href="assets/docs/WorkRight.pdf" class="btn btn-success">Presentation</a>
+                        <a href="assets/docs/WorkRight.pdf" class="btn btn-grad">Presentation</a>
                     </div>
                 </div>
             </div>
