--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
                     <a class="nav-link" href="#portfolio">PORTFOLIO</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="film.html">FILM</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="theatre.html">ACTING</a>
+                </li>
+                <li class="nav-item"></li>
+                    <a class="nav-link" href="blog.html">BLOG</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="#contact">CONTACT</a>
                 </li>
             </ul>
@@ -58,6 +67,8 @@
 
 <section class="text-black" id="contact">
   <div class="container">
+      <br>
+      <br>
       <br>
       <h1 class="text-center">Contact</h1>
       <br>
@@ -99,7 +110,9 @@
 
 <!-- about -->
 <section id="about">
+  <br>  
   <br>
+  <br>  
   <div class="container mt-12 pt-12">
       <h1 class="text-center">About Me</h1><br>
 
@@ -215,7 +228,6 @@
   <div class="container mt-3">
       <h1 class="text-center">Portfolio</h1>
       <div class="row">
-
         <div class="col-lg-4 mt-4">
             <div class="card">
                 <img class="card-img-top" src="images/Screen Shot 2023-10-20 at 08.21.39.png" alt="Card image" style="width:100%">
