--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
           <h2 class="hero_title">Hi, I'm Dustin</h2>
           <h2 class="hero_desc">I like to help people.</h2>
-          <h2 class="hero_desc">I can do:</h2>
-          <p class="hero_desc"><span id="dynamicText">web development</span><br>for you.</p>
+          <h2 class="hero_desc">I do:</h2>
+          <p class="hero_desc"><span id="dynamicText">full stack development</span><br>for you.</p>
           <h3><a href="assets/docs/DustinRuck_2024_EN_FSD.pdf" target="_blank" class="btn btn-grad">My CV</a></h3>
         </div>
       </div>
@@ -98,8 +98,8 @@
               <a href="tel:+4388808512">
                   <img src="assets/icons/icons8-phone-100.png" alt="Phone" loading="lazy">
                   <br>
-                  <small>+4388808512</small>
-              </a>
+<!--                   <small>+4388808512</small>
+              </a> -->
           </div>
       </div>
   </div>
@@ -128,10 +128,10 @@
 
               <div class="mt-6">
                   <p>
-                      Here are some things about me that may not have made it onto the CV (<a href="assets/docs/DustinRuck_2024_EN_FSD.pdf" class="body-links" target="_blank">which you can download here</a>). I love playing music, mostly guitar and bass but trying oud and bagpipes. I worked as a theatre actor in Canada and the UK. I took up martial arts at a young age and eventually taught for a few years which led to work doing motion capture stuntwork for video games. I studied film production at Concordia with an interest in editing but eventually found my focus drawn to production management and organizing a large indie film fest, workshops, and conferences.
+                      Here are some things about me that may not have made it onto the CV. I love learn music, currently classical guitar and starting out on Arabic oud. I previously worked in theatre as an actor in Canada and the UK. I took up martial arts at a young age, taught for a several years, and did performance work on motion capture for Ubisoft. I studied film production at Concordia focused on production management and student leadership roles organizing a film festival, workshops, and industry partnerships.
                   </p>
                   <p>
-                      My goal is to bring all of these experiences to bear as a developer. My absolute favorite things about developing are constantly learning new skills and figuring out how to solve new problems. I'm almost always working on a MOOC or part-time course or workshop at Concordia on my spare time. Looking forward to working with you!
+                      I bring all of these experiences with me, along with training in full stack development, to my work on projects and operations. I am consistently learning new skills and figuring out how to solve new problems — taking a course or workshop in my spare time. Reach out if you have a project you're working on or are looking for dynamic solutions for your business or team — looking forward to talking with you!
                   </p>
               </div>
           </div>
