--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
               <div class="mt-6">
                   <p>
-                      Here are some things about me that may not have made it onto the CV. I love learn music, currently classical guitar and starting out on Arabic oud. I previously worked in theatre as an actor in Canada and the UK. I took up martial arts at a young age, taught for a several years, and did performance work on motion capture for Ubisoft. I studied film production at Concordia focused on production management and student leadership roles organizing a film festival, workshops, and industry partnerships.
+                      Here are some things about me that may not have made it onto the CV. I love learning and playing music: currently classical guitar and starting out on Arabic oud. I previously worked in theatre as an actor in Canada and the UK. I took up martial arts at a young age, taught for a several years, and did performance work on motion capture for Ubisoft. I studied film production at Concordia focused on production management and student leadership roles organizing a film festival, workshops, and industry partnerships.
                   </p>
                   <p>
                       I bring all of these experiences with me, along with training in full stack development, to my work on projects and operations. I am consistently learning new skills and figuring out how to solve new problems — taking a course or workshop in my spare time. Reach out if you have a project you're working on or are looking for dynamic solutions for your business or team — looking forward to talking with you!
