--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
         $(document).ready(function() {
-            let roles = ['business automation', 'media production', 'project management'];
+            let roles = ['project coordination', 'film production management'];
             let currentIndex = 0;
     
             setInterval(function() {
