--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="row">
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
           <h2 class="hero_title">Hi, I'm Dustin</h2>
-          <h2 class="hero_desc">I like to help people.</h2>
+          <h2 class="hero_desc">I like to help people, projects, and businesses.</h2>
           <h2 class="hero_desc">I do:</h2>
           <p class="hero_desc"><span id="dynamicText">full stack development</span><br>for you.</p>
           <h3><a href="assets/docs/DustinRuck_2024_EN_FSD.pdf" target="_blank" class="btn btn-grad">My CV</a></h3>
@@ -123,12 +123,12 @@
 
           <div class="col-lg-6">
               <p>
-                  I'm currently finishing an intensive 13-month full-time AEC at John Abbott College in Full Stack Development and looking for an internship position as soon as April 29, 2024.
+                  Experience spanning 10+ years in coordination and management roles in film production, private country club operations, non-profits, and SME workflow automations. Recently upgraded my skills by completing an AEC career diploma in Full Stack Development (2023-24), and returned to complete my previous BFA Film Production at Concordia University (2025) — open to project and operations roles from May 2025.
               </p>
 
               <div class="mt-6">
                   <p>
-                      Here are some things about me that may not have made it onto the CV. I love learning and playing music: currently classical guitar and starting out on Arabic oud. I previously worked in theatre as an actor in Canada and the UK. I took up martial arts at a young age, taught for a several years, and did performance work on motion capture for Ubisoft. I studied film production at Concordia focused on production management and student leadership roles organizing a film festival, workshops, and industry partnerships.
+                      Here are some things about me that may not have made it onto the CV. I previously worked in theatre as an actor in Canada and the UK. I took up martial arts at a young age, taught for a several years, and did performance work on motion capture for Ubisoft (Rocky Balboa). After working as a performer for 7 years, I studied film production at Concordia University focusing on production management and student leadership roles over 3 years (organizing a 5-day film festival, workshops, and industry partnerships; faculty board committee roles for Cinema Chair Hiring, Department Appraisal Committee). On my free time: I train in amateur boxing, I love playing music (currently classical guitar and starting on Arabic oud), and I volunteer as a dog foster.
                   </p>
                   <p>
                       I bring all of these experiences with me, along with training in full stack development, to my work on projects and operations. I am consistently learning new skills and figuring out how to solve new problems — taking a course or workshop in my spare time. Reach out if you have a project you're working on or are looking for dynamic solutions for your business or team — looking forward to talking with you!
