--- a/index.html
+++ b/index.html
@@ -55,10 +55,11 @@
   <div class="container-fluid">
       <div class="row">
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
-          <h2 class="hero_title">Hi, I'm Dustin</h2>
-          <h2 class="hero_desc">I like to help people, projects, and businesses.</h2>
-          <h2 class="hero_desc">I do:</h2>
-          <p class="hero_desc"><span id="dynamicText">full stack development</span><br>for you.</p>
+          <h2 class="hero_title">Hi, I'm Dustin.</h2>
+          <h2 class="hero_desc">Can I help you with that?</h2>
+          <h2 class="hero_desc">Bridging creative vision and streamlined execution</h2>
+          <h2 class="hero_desc">I specialize in:</h2>
+          <p class="hero_desc"><span id="dynamicText">delivering on complex projects & operations</span><br>for you.</p>
           <h3><a href="assets/docs/DustinRuck_2024_EN_FSD.pdf" target="_blank" class="btn btn-grad">My CV</a></h3>
         </div>
       </div>
@@ -351,7 +352,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
         $(document).ready(function() {
-            let roles = ['project coordination', 'film production management'];
+            let roles = ['coordinating film productions from script to screen', 'automating business processes to save time daily', 'managing high-stakes events with 200+ attendees', 'turning creative concepts into executable plans', 'leading teams through tight deadlines', 'crisis coordinating & long-term planning'];
             let currentIndex = 0;
     
             setInterval(function() {
