--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               </a>
           </div>
           <div class="col">
-              <a href="tel:+4388808512">
+<!--               <a href="tel:+4388808512">-->
                   <img src="assets/icons/icons8-phone-100.png" alt="Phone" loading="lazy">
                   <br>
 <!--                   <small>+4388808512</small>
