--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <nav class="navbar navbar-expand-lg fixed-top navbarScroll">
     <div class="container">
-        <a class="navbar-brand" href="#">DUSTIN RUCK | WEBDEV & MEDIA</a>
+        <a class="navbar-brand" href="#">DUSTIN RUCK</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -55,13 +55,16 @@
   <div class="container-fluid">
       <div class="row">
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
-          <h2 class="hero_title">Hi, I'm Dustin.</h2>
-          <h2 class="hero_desc">Can I help you with that?</h2>
+          <h2 class="hero_title">Hi, I'm Dustin. Can I help you with that?</h2>
+<!--           <h2 class="hero_desc">Can I help you with that?</h2> -->
+      </div>
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
           <h2 class="hero_desc">Bridging creative vision and streamlined execution</h2>
           <h2 class="hero_desc">I specialize in:</h2>
-          <p class="hero_desc"><span id="dynamicText">delivering on complex projects & operations</span><br>for you.</p>
-          <h3><a href="assets/docs/DustinRuck_2024_EN_FSD.pdf" target="_blank" class="btn btn-grad">My CV</a></h3>
+          <p class="hero_desc"><span id="dynamicText">delivering on complex projects & operations</span></p>
+          <h3><a href="assets/docs/DustinRuck_2024_EN_FSD.pdf" target="_blank" class="btn btn-grad">Go on...</a></h3>
         </div>
+      </div>
       </div>
   </div>
 </section>
