--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <h2 class="hero_desc">Bridging creative vision and streamlined execution</h2>
           <h2 class="hero_desc">I specialize in:</h2>
           <p class="hero_desc"><span id="dynamicText">delivering on complex projects & operations</span></p>
-          <h3><a href="assets/docs/DustinRuck_2024_EN_FSD.pdf" target="_blank" class="btn btn-grad">Go on...</a></h3>
+          <h3><a href="#about" class="btn btn-grad">Go on...</a></h3>
         </div>
       </div>
       </div>
