--- a/index.html
+++ b/index.html
@@ -58,12 +58,14 @@
           <h2 class="hero_title">Hi, I'm Dustin. Can I help you with that?</h2>
 <!--           <h2 class="hero_desc">Can I help you with that?</h2> -->
       </div>
+      <div class="row">
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
           <h2 class="hero_desc">Bridging creative vision and streamlined execution</h2>
           <h2 class="hero_desc">I specialize in:</h2>
           <p class="hero_desc"><span id="dynamicText">delivering on complex projects & operations</span></p>
           <h3><a href="#about" class="btn btn-grad">Go on...</a></h3>
-        </div>
+      </div>
+      </div>
       </div>
       </div>
   </div>
