--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@
                   <small>dustin.ruck@gmail.com</small>
               </a>
           </div>
-          <div class="col">
-<!--               <a href="tel:+4388808512">-->
+          <!-- <div class="col">
+              <a href="tel:+4388808512">
                   <img src="assets/icons/icons8-phone-100.png" alt="Phone" loading="lazy">
                   <br>
-<!--                   <small>+4388808512</small>
-              </a> -->
-          </div>
+                  <small>+4388808512</small>
+              </a>
+          </div> -->
       </div>
   </div>
   <br>
@@ -391,7 +391,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
         $(document).ready(function() {
-            let roles = ['coordinating film productions from script to screen', 'automating business processes to save time daily', 'managing high-stakes events with 200+ attendees', 'turning creative concepts into executable plans', 'leading teams through tight deadlines', 'crisis coordinating & long-term planning'];
+            let roles = ['coordinating film productions from script to screen', 'automating business processes to save time daily', 'managing high-stakes events with 200+ attendees', 'delivering on complex projects & operations','turning creative concepts into executable plans', 'leading teams through tight deadlines', 'crisis coordinating & long-term planning'];
             let currentIndex = 0;
     
             setInterval(function() {
