--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,7 @@
 
   <nav class="navbar navbar-expand-lg fixed-top navbarScroll">
     <div class="container">
-        <a class="navbar-brand" href="index.html#">DUSTIN RUCK | WEBDEV & MEDIA</a>
+        <a class="navbar-brand" href="index.html#">DUSTIN RUCK</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
