--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
       <div class="row mt-6 justify-content-center">
           <div class="col-lg-6 text-center">
-              <img src="images/" class="imageAboutPage img-fluid" alt="">
+              <img src="images/djr_headshot12.png" class="imageAboutPage img-fluid" alt="">
           </div>
 
           <div class="col-lg-6">
